WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
303315
Touch event regions do not include transparent elements
https://bugs.webkit.org/show_bug.cgi?id=303315
Summary
Touch event regions do not include transparent elements
Lily Spiniolas
Reported
2025-12-01 07:48:50 PST
rdar://165619070
Attachments
Add attachment
proposed patch, testcase, etc.
Lily Spiniolas
Comment 1
2025-12-01 07:53:20 PST
Pull request:
https://github.com/WebKit/WebKit/pull/54637
EWS
Comment 2
2025-12-02 10:20:19 PST
Committed
303769@main
(a46e703d8009): <
https://commits.webkit.org/303769@main
> Reviewed commits have been landed. Closing PR #54637 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug