Touch event regions do not include transparent elements https://bugs.webkit.org/show_bug.cgi?id=303315 rdar://165619070

Reviewed by Wenson Hsieh.

Continue painting in `RenderLayer::paintLayerWithEffects` if we are
collecting event regions, even if the element has `opacity:0`

* Source/WebCore/rendering/RenderLayer.cpp:
(WebCore::RenderLayer::paintLayerWithEffects):

Canonical link: https://commits.webkit.org/303769@main